manifests/apps/00-core/03-gotify/05-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  selector:
    matchLabels:
      name: gotify
  template:
    metadata:
      labels:
        name: gotify
    spec:
      containers:
      - name: gotify
        image: gotify/server:2.1.7
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data
          name: gotify-data
      volumes:
      - name: gotify-data
        persistentVolumeClaim:
          claimName: gotify-pvc
