manifests/apps/00-core/03-gotify/05-ingress.yml
---
# Source: authelia/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify-ingress
  namespace: gotify
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: gotify.codekernel.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotify-service
                port:
                  number: 80
  tls:
  - hosts:
    - gotify.codekernel.co.uk
